# mpi_fun

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/main/: main.cpp  stl_refresher.cpp
src/mpi_fun/pi/: pi_calc.cpp  pi_calc.h
